--- a/src/main/resources/templates/homePage/fragments/cartContent.html
+++ b/src/main/resources/templates/homePage/fragments/cartContent.html
@@ -37,7 +37,7 @@
           <img th:src="@{assets/images/element/cart.svg}" class="h-200px h-md-300px mb-3" alt="Empty Cart">
           <h2>Your cart is currently empty</h2>
           <p class="mb-0">Please check out all the available courses and buy some courses that fulfill your needs.</p>
-          <a th:href="@{/courses}" class="btn btn-primary mt-4 mb-0">Back to Shop</a>
+          <a th:href="@{/home/coursesGrid}" class="btn btn-primary mt-4 mb-0">Back to Shop</a>
         </div>
       </div>
     </div>
@@ -107,7 +107,7 @@
               <hr class="my-1">
               <li class="list-group-item px-0 d-flex justify-content-between">
                 <span class="h5 mb-0">Total</span>
-                <span class="h5 mb-0" th:text="'Total:' + ${#numbers.formatDecimal(totalPrice, 0, 'COMMA', 2, 'POINT') +' đ'}">0.00</span>
+                <span class="h5 mb-0" th:text="${#numbers.formatDecimal(totalPrice, 0, 'COMMA', 2, 'POINT') +' đ'}">0.00</span>
               </li>
             </ul>
             <div class="d-flex justify-content-center">
@@ -128,7 +128,7 @@
           <div class="card card-body p-4 shadow mt-4">
             <h5 class="mb-3">Continue Shopping</h5>
             <div class="d-grid">
-              <a th:href="@{/courses}" class="btn btn-outline-primary">
+              <a th:href="@{/home/coursesGrid}" class="btn btn-outline-primary">
                 <i class="fas fa-arrow-left me-2"></i>Browse More Courses
               </a>
             </div>
