--- a/src/main/resources/templates/adminDashBoard/fragments/courseMaintenanceContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseMaintenanceContent.html
@@ -3,7 +3,7 @@
     <!-- Title -->
     <div class="row mb-3">
         <div class="col-md-6">
-            <h1 class="h3 mb-2 mb-sm-0" th:text="${accNamePage}">Course Maintenances</h1>
+            <h1 class="h3 mb-2 mb-sm-0" th:text="${accNamePage}">Course Maintenances Fee</h1>
         </div>
         <div class="col-md-6">
             <div class="d-flex justify-content-md-end justify-content-start align-items-center mt-2 mt-md-0">
