--- a/src/main/resources/templates/adminDashBoard/fragments/userTableRowContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/userTableRowContent.html
@@ -25,7 +25,13 @@
 
         </td>
         <td style="white-space: nowrap;">
-            <a th:href="@{/admin/account/viewInfo/{userId}(userId=${u.userId})}"
+            <a th:if="${u.roleName == 'Instructor'}"
+               th:href="@{/admin/mnInstructors/viewInfo/{userId}(userId=${u.userId})}"
+               class="btn btn-info btn-sm" title="View">
+                <i class="fas fa-eye"></i>
+            </a>
+            <a th:unless="${u.roleName == 'Instructor'}"
+               th:href="@{/admin/account/viewInfo/{userId}(userId=${u.userId})}"
                class="btn btn-info btn-sm" title="View">
                 <i class="fas fa-eye"></i>
             </a>
